# JiUI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  jiui.pc.in
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/cube/: main.c
examples/hello/: main.c
examples/showcase/: main.c
examples/unity_layout/: CMakeLists.txt  main.c
examples/window/: main.c
examples/xml_loader/: main.c
include/jiui/: ji_3d.h  ji_accessibility.h  ji_animation.h  ji_api.h  ji_ast.h  ji_automation.h  ji_binding.h  ji_box_layout.h  ji_builder.h  ji_codegen.h  ji_combo_box.h  ji_command_link_button.h  ji_compositor.h  ji_config.h.in  ji_constraint.h  ji_control.h  ji_date_time_edit.h  ji_defines.h  ji_dial.h  ji_dock_area.h  ji_dock_manager.h  ji_dock_overlay.h  ji_dock_pro.h  ji_dock_serializer.h  ji_dock_tab_bar.h  ji_dock_widget.h  ji_double_spin_box.h  ji_drawing.h  ji_effects.h  ji_error.h  ji_event.h  ji_flow_layout.h  ji_font.h  ji_form_layout.h  ji_frame.h  ji_frame_graph.h  ji_gesture.h  ji_gpu.h  ji_gpu_effects.h  ji_group_box.h  (+56 more)
src/3d/: ji_3d.c  ji_3d_camera.c  ji_3d_gizmo.c  ji_3d_light.c  ji_3d_mesh.c  ji_3d_viewport.c
src/a11y/: ji_a11y_atspi.c  ji_accessibility.c
src/controls/: ji_combo_box.c  ji_command_link_button.c  ji_control.c  ji_date_time_edit.c  ji_dial.c  ji_double_spin_box.c  ji_frame.c  ji_group_box.c  ji_menu.c  ji_model_view.c  ji_plain_text_edit.c  ji_radio_button.c  ji_scroll_area.c  ji_scroll_bar.c  ji_spin_box.c  ji_stacked_widget.c  ji_status_bar.c  ji_tab_widget.c  ji_text_edit.c  ji_tool_bar.c  ji_tool_button.c  ji_widgets.c
src/core/: ji_animation.c  ji_automation.c  ji_automation_record.c  ji_binding.c  ji_error.c  ji_event.c  ji_file_watcher.c  ji_hidpi.c  ji_hot_reload.c  ji_memory.c  ji_neural.c  ji_object.c  ji_physics.c  ji_plugin.c  ji_plugin_loader.c  ji_profiler.c  ji_property.c  ji_sandbox.c  ji_threads.c  ji_type.c  ji_types.c  ji_undo_stack.c
src/docking/: ji_dock_area.c  ji_dock_auto_hide.c  ji_dock_manager.c  ji_dock_multi_monitor.c  ji_dock_overlay.c  ji_dock_pro.c  ji_dock_serializer.c  ji_dock_tab_bar.c  ji_dock_widget.c  ji_splitter.c
src/i18n/: ji_i18n.c  ji_i18n_bidi.c  ji_i18n_plural.c
src/input/: ji_gesture.c  ji_input.c  ji_input_gamepad.c  ji_input_internal.h  ji_input_pen.c  ji_input_touch.c
src/layout/: ji_box_layout.c  ji_constraint.c  ji_flow_layout.c  ji_form_layout.c  ji_layout.c  ji_panel.c
src/multimedia/: ji_audio_viz.c  ji_timeline.c  ji_video.c
src/parser/: ji_ast.c  ji_jiml_compiler.c  ji_jiml_parser.c  ji_lexer.c  ji_loader.c  ji_parser.c  ji_tree_builder.c  ji_xml_lexer.c  ji_xml_parser.c
src/platform/: ji_platform.c  ji_platform_wayland.c  ji_platform_x11.c  ji_window.c  ji_window_internal.h
src/render/: ji_compositor.c  ji_frame_graph.c  ji_gpu.c  ji_gpu_effects.c  ji_gpu_internal.h  ji_gpu_software.c  ji_lighting.c  ji_material.c  ji_material_glass.c  ji_material_neon.c  ji_material_pbr.c  ji_scene.c
src/style/: ji_palette.c  ji_qt_style.c  ji_style.c  ji_stylesheet.c
src/testing/: ji_screenshot_test.c  ji_zlib_compat.h
src/text/: ji_font.c  ji_svg.c  ji_text_engine.c
src/tools/: ji_builder.c  ji_builder_codegen.c  ji_builder_widgets.c
src/tools/jigen/: jigen.c  jigen_codegen.c
src/visual/: ji_drawing.c  ji_effects.c  ji_visual.c
tests/: CMakeLists.txt  test_3d.c  test_accessibility.c  test_advanced.c  test_automation.c  test_binding.c  test_buttons.c  test_codegen.c  test_constraint.c  test_containers.c  test_controls.c  test_cpp.cpp  test_dock.c  test_dock_advanced.c  test_dock_pro.c  test_error.c  test_gesture.c  test_gpu_scene.c  test_hidpi.c  test_hot_reload.c  test_i18n.c  test_input.c  test_inputs.c  test_jiml.c  test_layout.c  test_layouts.c  test_loader.c  test_material.c  test_memory.c  test_multimedia.c  test_object.c  test_palette.c  test_parser.c  test_physics.c  test_platform.c  test_plugin.c  test_profiler.c  test_resource.c  test_screenshot.c  test_splitter.c  (+7 more)
